Kubernetes_v6/Scenarios/Scenario25/cluster_policy1_disallow_default_namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
  annotations:
    policies.kyverno.io/title: Disallow Default Namespace for PVC
    policies.kyverno.io/category: Multi-Tenancy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: PVC
    policies.kyverno.io/description: >-
      Kubernetes Namespaces are an optional feature that provide a way to segment and
      isolate cluster resources across multiple applications and users. As a best
      practice, workloads should be isolated with Namespaces. Namespaces should be required
      and the default (empty) Namespace should not be used. This policy validates that PVC
      specify a Namespace name other than `default`. 
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: validate-namespace
    match:
      any:
      - resources:
          kinds:
          - PersistentVolumeClaim
    validate:
      message: "Using 'default' namespace is not allowed."
      pattern:
        metadata:
          namespace: "!default"
